--- a/y/libp2p/stream/lpstream.html
+++ b/y/libp2p/stream/lpstream.html
@@ -354,11 +354,6 @@ window.addEventListener("DOMContentLoaded", main2);
     title="atEof(s: LPStream): bool">atEof(s: LPStream): bool</a></li>
 
   </ul>
-  <ul class="simple nested-toc-section">close
-      <li><a class="reference" href="#close.e%2CLPStream"
-    title="close(s: LPStream): Future[void]">close(s: LPStream): Future[void]</a></li>
-
-  </ul>
   <ul class="simple nested-toc-section">closed
       <li><a class="reference" href="#closed.e%2CLPStream"
     title="closed(s: LPStream): bool">closed(s: LPStream): bool</a></li>
@@ -367,6 +362,13 @@ window.addEventListener("DOMContentLoaded", main2);
   <ul class="simple nested-toc-section">closeImpl
       <li><a class="reference" href="#closeImpl.e%2CLPStream"
     title="closeImpl(s: LPStream): Future[void]">closeImpl(s: LPStream): Future[void]</a></li>
+
+  </ul>
+  <ul class="simple nested-toc-section">closeX
+      <li><a class="reference" href="#closeX.e%2CLPStream%2Ctuple%5Bstring%2Cint%2Cint%5D"
+    title="closeX(s: LPStream; info: tuple[filename: string, line: int, column: int]): Future[
+    void]">closeX(s: LPStream; info: tuple[filename: string, line: int, column: int]): Future[
+    void]</a></li>
 
   </ul>
   <ul class="simple nested-toc-section">initStream
@@ -390,7 +392,12 @@ window.addEventListener("DOMContentLoaded", main2);
 <li>
   <a class="reference reference-toplevel" href="#18" id="68">Templates</a>
   <ul class="simple simple-toc-section">
-      <ul class="simple nested-toc-section">formatItIMPL
+      <ul class="simple nested-toc-section">close
+      <li><a class="reference" href="#close.t%2CLPStream"
+    title="close(s: LPStream): untyped">close(s: LPStream): untyped</a></li>
+
+  </ul>
+  <ul class="simple nested-toc-section">formatItIMPL
       <li><a class="reference" href="#formatItIMPL.t%2CLPStream"
     title="formatItIMPL(it: LPStream): auto">formatItIMPL(it: LPStream): auto</a></li>
 
@@ -641,9 +648,9 @@ class="link-seesrc" target="_blank">Source</a>
 <p>In particular, it must not be used when there is another concurrent read ongoing (which may be the case during cancellations)! </p>
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/y/libp2p/stream/lpstream.nim#L297"
+href="https://github.com/status-im/nim-libp2p/tree/y/libp2p/stream/lpstream.nim#L302"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/stream/lpstream.nim#L297" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/stream/lpstream.nim#L302" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -881,19 +888,6 @@ class="link-seesrc" target="_blank">Source</a>
 
 </dd>
 </div>
-<div id="close.e,LPStream" class="tohide">
-<dt><pre><span class="Keyword">method</span> <a href="#close.e%2CLPStream"><span class="Identifier">close</span></a><span class="Other">(</span><span class="Identifier">s</span><span class="Other">:</span> <a href="lpstream.html#LPStream"><span class="Identifier">LPStream</span></a><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">Future</span><span class="Other">[</span><span class="Identifier">void</span><span class="Other">]</span> {.<span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">public</span><span class="Other">(</span><span class="Other">)</span><span class="Other">,</span> <span class="Identifier">stackTrace</span><span class="Other">:</span> <span class="DecNumber">false</span><span class="Other">,</span>
-    <span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">gcsafe</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">RootEffect</span><span class="Other">]</span></span>.}</pre></dt>
-<dd>
-
-close the stream - this may block, but will not raise exceptions 
-&nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/y/libp2p/stream/lpstream.nim#L283"
-class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/stream/lpstream.nim#L283" class="link-seesrc" target="_blank" >Edit</a>
-
-</dd>
-</div>
 <div id="closed.e,LPStream" class="tohide">
 <dt><pre><span class="Keyword">method</span> <a href="#closed.e%2CLPStream"><span class="Identifier">closed</span></a><span class="Other">(</span><span class="Identifier">s</span><span class="Other">:</span> <a href="lpstream.html#LPStream"><span class="Identifier">LPStream</span></a><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">bool</span> {.<span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">public</span><span class="Other">,</span> <span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}</pre></dt>
 <dd>
@@ -916,6 +910,20 @@ Implementation of close - called only once
 href="https://github.com/status-im/nim-libp2p/tree/y/libp2p/stream/lpstream.nim#L275"
 class="link-seesrc" target="_blank">Source</a>
 &nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/stream/lpstream.nim#L275" class="link-seesrc" target="_blank" >Edit</a>
+
+</dd>
+</div>
+<div id="closeX.e,LPStream,tuple[string,int,int]" class="tohide">
+<dt><pre><span class="Keyword">method</span> <a href="#closeX.e%2CLPStream%2Ctuple%5Bstring%2Cint%2Cint%5D"><span class="Identifier">closeX</span></a><span class="Other">(</span><span class="Identifier">s</span><span class="Other">:</span> <a href="lpstream.html#LPStream"><span class="Identifier">LPStream</span></a><span class="Other">;</span> <span class="Identifier">info</span><span class="Other">:</span> <span class="Keyword">tuple</span><span class="Other">[</span><span class="Identifier">filename</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">,</span> <span class="Identifier">line</span><span class="Other">:</span> <span class="Identifier">int</span><span class="Other">,</span> <span class="Identifier">column</span><span class="Other">:</span> <span class="Identifier">int</span><span class="Other">]</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">Future</span><span class="Other">[</span>
+    <span class="Identifier">void</span><span class="Other">]</span> {.<span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">public</span><span class="Other">(</span><span class="Other">)</span><span class="Other">,</span> <span class="Identifier">stackTrace</span><span class="Other">:</span> <span class="DecNumber">false</span><span class="Other">,</span> <span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">gcsafe</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span>
+            <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">RootEffect</span><span class="Other">]</span></span>.}</pre></dt>
+<dd>
+
+
+&nbsp;&nbsp;<a
+href="https://github.com/status-im/nim-libp2p/tree/y/libp2p/stream/lpstream.nim#L283"
+class="link-seesrc" target="_blank">Source</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/stream/lpstream.nim#L283" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -963,6 +971,18 @@ class="link-seesrc" target="_blank">Source</a>
 <div class="section" id="18">
 <h1><a class="toc-backref" href="#18">Templates</a></h1>
 <dl class="item">
+<div id="close.t,LPStream" class="tohide">
+<dt><pre><span class="Keyword">template</span> <a href="#close.t%2CLPStream"><span class="Identifier">close</span></a><span class="Other">(</span><span class="Identifier">s</span><span class="Other">:</span> <a href="lpstream.html#LPStream"><span class="Identifier">LPStream</span></a><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">untyped</span></pre></dt>
+<dd>
+
+
+&nbsp;&nbsp;<a
+href="https://github.com/status-im/nim-libp2p/tree/y/libp2p/stream/lpstream.nim#L299"
+class="link-seesrc" target="_blank">Source</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/stream/lpstream.nim#L299" class="link-seesrc" target="_blank" >Edit</a>
+
+</dd>
+</div>
 <div id="formatItIMPL.t,LPStream" class="tohide">
 <dt><pre><span class="Keyword">template</span> <a href="#formatItIMPL.t%2CLPStream"><span class="Identifier">formatItIMPL</span></a><span class="Other">(</span><span class="Identifier">it</span><span class="Other">:</span> <a href="lpstream.html#LPStream"><span class="Identifier">LPStream</span></a><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">auto</span></pre></dt>
 <dd>
@@ -990,7 +1010,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2022-11-21 15:54:07 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2022-11-28 14:25:47 UTC</small>
       </div>
     </div>
   </div>
