--- a/maxstreamsperproto/libp2p/protocols/protocol.html
+++ b/maxstreamsperproto/libp2p/protocols/protocol.html
@@ -210,7 +210,7 @@ window.addEventListener("DOMContentLoaded", main2);
   codecs*: seq[string]
   handler*: LPProtoHandler   ## this handler gets invoked by the protocol negotiator
   started*: bool
-  maxStreams*: Opt[int]">LPProtocol</a></li>
+  maxIncomingStreams*: Opt[int]">LPProtocol</a></li>
   <li><a class="reference" href="#LPProtoHandler"
     title="LPProtoHandler = proc (conn: Connection; proto: string): Future[void] {.gcsafe,
     raises: [Defect].}">LPProtoHandler</a></li>
@@ -220,8 +220,8 @@ window.addEventListener("DOMContentLoaded", main2);
 <li>
   <a class="reference reference-toplevel" href="#10" id="60">Consts</a>
   <ul class="simple simple-toc-section">
-      <li><a class="reference" href="#DefaultMaxStreams"
-    title="DefaultMaxStreams = 10">DefaultMaxStreams</a></li>
+      <li><a class="reference" href="#DefaultMaxIncomingStreams"
+    title="DefaultMaxIncomingStreams = 10">DefaultMaxIncomingStreams</a></li>
 
   </ul>
 </li>
@@ -293,7 +293,7 @@ class="link-seesrc" target="_blank">Source</a>
   <span class="Identifier">codecs</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">string</span><span class="Other">]</span>
   <span class="Identifier">handler</span><span class="Operator">*</span><span class="Other">:</span> <a href="protocol.html#LPProtoHandler"><span class="Identifier">LPProtoHandler</span></a>   <span class="Comment">## this handler gets invoked by the protocol negotiator</span>
   <span class="Identifier">started</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">bool</span>
-  <span class="Identifier">maxStreams</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">Opt</span><span class="Other">[</span><span class="Identifier">int</span><span class="Other">]</span>
+  <span class="Identifier">maxIncomingStreams</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">Opt</span><span class="Other">[</span><span class="Identifier">int</span><span class="Other">]</span>
 </pre></dt>
 <dd>
 
@@ -323,8 +323,8 @@ class="link-seesrc" target="_blank">Source</a>
 <div class="section" id="10">
 <h1><a class="toc-backref" href="#10">Consts</a></h1>
 <dl class="item">
-<div id="DefaultMaxStreams" class="tohide">
-<dt><pre><a href="protocol.html#DefaultMaxStreams"><span class="Identifier">DefaultMaxStreams</span></a> <span class="Other">=</span> <span class="DecNumber">10</span></pre></dt>
+<div id="DefaultMaxIncomingStreams" class="tohide">
+<dt><pre><a href="protocol.html#DefaultMaxIncomingStreams"><span class="Identifier">DefaultMaxIncomingStreams</span></a> <span class="Other">=</span> <span class="DecNumber">10</span></pre></dt>
 <dd>
 
 
@@ -429,7 +429,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2022-11-29 14:25:53 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2022-11-30 13:02:53 UTC</small>
       </div>
     </div>
   </div>
