--- a/maxstreamsperproto/libp2p/protocols/pubsub/pubsub.html
+++ b/maxstreamsperproto/libp2p/protocols/pubsub/pubsub.html
@@ -1147,7 +1147,7 @@ class="link-seesrc" target="_blank">Source</a>
 <div class="section" id="19">
 <h1><a class="toc-backref" href="#19">Exports</a></h1>
 <dl class="item">
-<a href="pubsubpeer.html#PubSubPeer"><span class="Identifier">PubSubPeer</span></a>, <a href="pubsubpeer.html#PubSubObserver"><span class="Identifier">PubSubObserver</span></a>, <a href="../protocol.html#LPProtoHandler"><span class="Identifier">LPProtoHandler</span></a>, <a href="../protocol.html#LPProtocol"><span class="Identifier">LPProtocol</span></a>, <a href="../protocol.html#stop.e,LPProtocol"><span class="Identifier">stop</span></a>, <a href="../protocol.html#codec=,LPProtocol,string"><span class="Identifier">codec=</span></a>, <a href="../protocol.html#codec,LPProtocol"><span class="Identifier">codec</span></a>, <a href="../protocol.html#init.e,LPProtocol"><span class="Identifier">init</span></a>, <a href="../protocol.html#hash,LPProtocol"><span class="Identifier">hash</span></a>, <a href="../protocol.html#DefaultMaxStreams"><span class="Identifier">DefaultMaxStreams</span></a>, <a href="../protocol.html#start.e,LPProtocol"><span class="Identifier">start</span></a>, <a href="errors.html#ValidationResult"><span class="Identifier">ValidationResult</span></a>
+<a href="pubsubpeer.html#PubSubPeer"><span class="Identifier">PubSubPeer</span></a>, <a href="pubsubpeer.html#PubSubObserver"><span class="Identifier">PubSubObserver</span></a>, <a href="../protocol.html#LPProtoHandler"><span class="Identifier">LPProtoHandler</span></a>, <a href="../protocol.html#LPProtocol"><span class="Identifier">LPProtocol</span></a>, <a href="../protocol.html#stop.e,LPProtocol"><span class="Identifier">stop</span></a>, <a href="../protocol.html#codec=,LPProtocol,string"><span class="Identifier">codec=</span></a>, <a href="../protocol.html#codec,LPProtocol"><span class="Identifier">codec</span></a>, <a href="../protocol.html#init.e,LPProtocol"><span class="Identifier">init</span></a>, <a href="../protocol.html#hash,LPProtocol"><span class="Identifier">hash</span></a>, <a href="../protocol.html#DefaultMaxIncomingStreams"><span class="Identifier">DefaultMaxIncomingStreams</span></a>, <a href="../protocol.html#start.e,LPProtocol"><span class="Identifier">start</span></a>, <a href="errors.html#ValidationResult"><span class="Identifier">ValidationResult</span></a>
 </dl></div>
 
   </div>
@@ -1157,7 +1157,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2022-11-29 14:25:56 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2022-11-30 13:02:56 UTC</small>
       </div>
     </div>
   </div>
